--- a/user-service/docker-compose.yml
+++ b/user-service/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     container_name: mysql_db_user_service
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: DB_PASSWORD
-      MYSQL_DATABASE: DB_NAME
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
       - "3307:3306"
     volumes:
@@ -20,9 +20,9 @@ services:
     depends_on:
       - mysql
     environment:
-      SPRING_DATASOURCE_URL: DB_URL
-      SPRING_DATASOURCE_USERNAME: DB_USERNAME
-      SPRING_DATASOURCE_PASSWORD: DB_PASSWORD
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/${MYSQL_DATABASE}
+      SPRING_DATASOURCE_USERNAME: ${MYSQL_USER}
+      SPRING_DATASOURCE_PASSWORD: ${MYSQL_PASSWORD}
       SERVER_PORT: 8086
     ports:
       - "8086:8086"
