complete inventory service

--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -3,9 +3,14 @@ server:
 
 spring:
   application:
-    name: Inventory Service
+    name: inventory-service
 
   datasource:
     url: jdbc:mysql://localhost:3306/inventory_db
     username: root
     password: admin
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQL8Dialect
