--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -14,11 +14,13 @@ server:
 # this is used to show multiple services at same time on swagger
 springdoc:
   swagger-ui:
-    path: /swagger-ui.html
-    url: http://localhost:8080/merged-api-docs
-
+    path: /swagger-ui
+    url: /merged-api-docs
 
 spring:
+  webflux:
+    static-path-pattern: /swagger-ui/**
+
   security:
     user:
       name: admin
@@ -41,3 +43,9 @@ spring:
               uri: http://localhost:8087
               predicates:
                 - Path=/api/v1/vendor/**
+            - id: inventory-service
+              uri: http://localhost:8083
+              predicates:
+                - Path=/api/v1/categories/**
+                - Path=/api/v1/item-availability/**
+                - Path=/api/v1/item/**
