--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -114,30 +114,33 @@
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
-                <version>2.43.0</version> <!-- Use the latest version -->
+                <version>2.43.0</version>
                 <configuration>
                     <java>
-                        <!-- Use Google Java Format -->
+                        <!-- Include all Java source files -->
+                        <includes>
+                            <include>src/main/java/**/*.java</include>
+                            <include>src/test/java/**/*.java</include>
+                        </includes>
+
+                        <!-- Google Java Format -->
                         <googleJavaFormat>
                             <version>1.17.0</version>
-                            <style>AOSP</style>
+                            <style>GOOGLE</style> <!-- Change to AOSP if you prefer -->
                         </googleJavaFormat>
+
+                        <!-- Extra formatting rules -->
                         <removeUnusedImports/>
                         <trimTrailingWhitespace/>
                         <endWithNewline/>
                     </java>
                 </configuration>
+
                 <executions>
-                    <execution>
-                        <id>spotless-check</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
+                    <!-- Apply formatting automatically during build -->
                     <execution>
                         <id>spotless-apply</id>
-                        <phase>process-sources</phase>
+                        <phase>validate</phase> <!-- runs before compile -->
                         <goals>
                             <goal>apply</goal>
                         </goals>
