--- a/booking-service/src/main/resources/application.yml
+++ b/booking-service/src/main/resources/application.yml
@@ -9,3 +9,8 @@ spring:
     url: jdbc:mysql://localhost:3306/booking_db
     username: root
     password: admin
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.MySQL8Dialect
