--- a/admin-service/src/main/resources/application.yml
+++ b/admin-service/src/main/resources/application.yml
@@ -10,3 +10,8 @@ spring:
     username: root
     password: admin
 
+services:
+  user-service:
+    url: http://localhost:8086/
+  vendor-service:
+    url: http://localhost:8087/
